--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="#service" class="nav-item nav-link">Education</a>
             </div>
             <a href="index.html" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
-                <h1 class="text-primary fw-bold m-0">Roshan Ghimire</h1>
+                <h2 class="text-primary fw-bold m-0">Roshan Ghimire</h2>
             </a>
             <div class="navbar-nav me-auto py-0">
                 <a href="#project" class="nav-item nav-link">My Projects</a>
@@ -121,15 +121,19 @@
                     <div class="d-flex align-items-center mb-5">
                         <div class="years flex-shrink-0 text-center me-4">
                             <h1 class="display-1 mb-0">8</h1>
-                            <h5 class="mb-0">Years</h5>
+                            <h5 class="mb-0">Years Plus</h5>
                         </div>
-                        <h3 class="lh-base mb-0">of working experience as a web designer & developer</h3>
+                        <h3 class="lh-base mb-0">of working experience as an Information Technology Officer</h3>
                     </div>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Afordable Prices</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>High Quality Product</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>On Time Project Delivery</p>
-                    <a class="btn btn-primary py-3 px-5 mt-3" href="">Read More</a>
+                    <p class="mb-4">in Chautara Sangachokgadhi Municipality, Sindhupalchok, Nepal.</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Customized Training Skills</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Technical support proficiency</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Successful IT Implementations</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Database Management Proficiency</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Software Applications Management</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Financial management contribution</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Innovative Electronic Governance Implementation</p>
+                    <a class="btn btn-primary py-3 px-5 mt-3" href="https://erroshanghimire.com.np/#skill">Read More</a>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-3 mb-4">
