--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
                         </div>
                         <h3 class="lh-base mb-0">of working experience as an Information Technology Officer</h3>
                     </div>
-                    <p class="mb-4">in Chautara Sangachokgadhi Municipality, Sindhupalchok, Nepal.</p>
+                    <p class="mb-4">at Chautara Sangachokgadhi Municipality, Sindhupalchok, Nepal.</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Customized Training Skills</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Technical support proficiency</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Technical Support Proficiency</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Successful IT Implementations</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Database Management Proficiency</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Software Applications Management</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Financial management contribution</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Innovative Electronic Governance Implementation</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Financial Management Contribution</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Innovative e-Governance Implementation</p>
                     <a class="btn btn-primary py-3 px-5 mt-3" href="https://erroshanghimire.com.np/#skill">Read More</a>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
