--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </div>
                         <h3 class="lh-base mb-0">of working experience as an Information Technology Officer</h3>
                     </div>
-                    <p class="mb-4">at Chautara Sangachokgadhi Municipality, Sindhupalchok, Nepal.</p>
+                    <p class="mb-4"> <a href="https://chautarasangachowkgadhimun.gov.np/ne" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block" target="_blank">at Chautara Sangachokgadhi Municipality, Sindhupalchok, Nepal.</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Customized Training Skills</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Technical Support Proficiency</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Successful IT Implementations</p>
