--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </div>
                         <h3 class="lh-base mb-0">of working experience as an Information Technology Officer</h3>
                     </div>
-                    <p class="mb-4"> at <a href="https://chautarasangachowkgadhimun.gov.np/ne" target="_blank"> <b>Chautara Sangachokgadhi Municipality, Sindhupalchok, Nepal.</b></p>
+                    <p class="mb-4"> at <a href="https://chautarasangachowkgadhimun.gov.np/ne" target="_blank"><b>Chautara Sangachokgadhi Municipality, Sindhupalchok, Nepal.</b></p></a>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Customized Training Skills</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Technical Support Proficiency</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Successful IT Implementations</p>
