--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Software Applications Management</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Financial Management Contribution</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Innovative e-Governance Implementation</p>
-                    <a class="btn btn-primary py-3 px-5 mt-3" href="https://erroshanghimire.com.np/#skill">Read More</a>
+                    <a class="btn btn-primary py-3 px-5 mt-3" href="https://erroshanghimire.com.np/#skill">More</a>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-3 mb-4">
@@ -145,15 +145,13 @@
                         </div>
                     </div>
                     <div class="d-flex align-items-center mb-3">
-                        <h5 class="border-end pe-3 me-3 mb-0">Happy Clients</h5>
-                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">1234</h2>
+                        <h5 class="border-end pe-3 me-3 mb-0">Happy Time</h5>
                     </div>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
+                    <p class="mb-4">Office Time.</p>
                     <div class="d-flex align-items-center mb-3">
                         <h5 class="border-end pe-3 me-3 mb-0">Projects Completed</h5>
-                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">1234</h2>
                     </div>
-                    <p class="mb-0">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
+                    <p class="mb-0">Training Time to the Staffs of Office.</p>
                 </div>
             </div>
         </div>
