--- a/index.html
+++ b/index.html
@@ -144,14 +144,16 @@
                             <img class="img-fluid rounded" src="img/about-2.jpg" alt="">
                         </div>
                     </div>
-                    <div class="d-flex align-items-center mb-3">
-                        <h5 class="border-end pe-3 me-3 mb-0">Happy Time</h5>
+                </div>
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="row g-3 mb-4">
+                        <div class="col-sm-6">
+                            <img class="img-fluid rounded" src="img/about-1.jpg" alt="">
+                        </div>
+                        <div class="col-sm-6">
+                            <img class="img-fluid rounded" src="img/about-2.jpg" alt="">
+                        </div>
                     </div>
-                    <p class="mb-4">Office Time.</p>
-                    <div class="d-flex align-items-center mb-3">
-                        <h5 class="border-end pe-3 me-3 mb-0">Projects Completed</h5>
-                    </div>
-                    <p class="mb-0">Training Time to the Staffs of Office.</p>
                 </div>
             </div>
         </div>
