--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <p class="mb-4">The contact form is currently inactive.</p>
-                    <form>
+                    <form action="mailto:iamroshanghimire@gmail.com" method="post" enctype="text/plain">
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
