--- a/index.html
+++ b/index.html
@@ -453,8 +453,8 @@
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <p class="mb-4">The contact form is currently inactive.</p>
-                    <form action="mailto:iamroshanghimire@gmail.com" method="post" enctype="text/plain">
+                    <p class="mb-4">Tyep Your Message and Send to Me.</p>
+                    <form action="mailto:iamroshanghimire@gmail.com" method="post">
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
