--- a/index.html
+++ b/index.html
@@ -454,7 +454,8 @@
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <p class="mb-4">Tyep Your Message and Send to Me.</p>
-                    <form action="mailto:iamroshanghimire@gmail.com" method="post">
+                   
+                        <form action="https://formspree.io/f/xpzvgwon" method="POST">
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
