--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <p class="mb-4">Tyep Your Message and Send to Me.</p>
                    
-                        <form action="https://formspree.io/f/xpzvgwon" method="POST">
+                        <form action="mailto:iamroshanghimire@gmail.com" method="POST">
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
