--- a/major-project.html
+++ b/major-project.html
@@ -6,7 +6,7 @@
     <title>Major Project: Cell Phone Based Voting Machine with Voice Acknowledgement</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Times New Roman', Times, serif; /* Change font-family */
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
@@ -25,16 +25,19 @@
             background-color: #fff;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            text-align: justify;
         }
         h1, h2, h3 {
             color: #007bff;
         }
         p {
             line-height: 1.6;
+            text-align: justify;
         }
         ul {
             list-style-type: disc;
             padding-left: 20px;
+            text-align: justify;
         }
     </style>
 </head>
@@ -71,10 +74,10 @@
         The project was developed by a group of four members:
     </p>
     <ul>
-        <li>Member 1: [Name]</li>
-        <li>Member 2: [Name]</li>
-        <li>Member 3: [Name]</li>
-        <li>Member 4: [Name]</li>
+        <li>Member 1: Kobid Karki</li>
+        <li>Member 2: Lizana Khadka</li>
+        <li>Member 3: Rashmi Paudel</li>
+        <li>Member 4: Roshan Ghimire</li>
     </ul>
 
     <h2>Conclusion</h2>
