--- a/minor-project.html
+++ b/minor-project.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minor Project: [Your Project Title]</title>
+    <title>Minor Project: Digital Alarm Clock with Thermometer</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Times New Roman', Times, serif; /* Change font-family */
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
@@ -25,50 +25,63 @@
             background-color: #fff;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            text-align: justify;
         }
         h1, h2, h3 {
             color: #007bff;
         }
         p {
             line-height: 1.6;
+            text-align: justify;
+        }
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+            text-align: justify;
         }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>Minor Project: [Your Project Title]</h1>
+    <h1>Minor Project: Digital Alarm Clock with Thermometer</h1>
 </header>
 
 <main>
     <h2>About the Project</h2>
     <p>
-        Briefly introduce your minor project. Describe its purpose, objectives, and any specific problem it addresses.
+        A digital clock was built which displayed time and date along with the ambient temperature. It was an 8051 based system which included 16X2 LCD for display, LM35 for temperature sensing, and ADC0804 for interfacing sensor with 8051. It had inputs in order to adjust date and time.
     </p>
 
-    <h2>Technologies Used</h2>
-    <p>
-        List the technologies, tools, and programming languages you used to develop your project. Explain why you chose them and how they contributed to the project's success.
-    </p>
-
-    <h2>Key Features</h2>
+    <h2>Project Components</h2>
     <ul>
-        <li>Feature 1: Describe a key feature of your project.</li>
-        <li>Feature 2: Describe another key feature of your project.</li>
-        <li>Feature 3: Describe another key feature of your project.</li>
-        <!-- Add more features as needed -->
+        <li>8051 microcontroller</li>
+        <li>16X2 LCD display</li>
+        <li>LM35 temperature sensor</li>
+        <li>ADC0804 ADC converter</li>
     </ul>
 
-    <h2>Project Screenshots</h2>
-    <div>
-        <img src="screenshot1.jpg" alt="Screenshot 1">
-        <img src="screenshot2.jpg" alt="Screenshot 2">
-        <!-- Add more screenshots as needed -->
-    </div>
+    <h2>Project Features</h2>
+    <ul>
+        <li>Display of time and date</li>
+        <li>Ambient temperature measurement</li>
+        <li>User inputs for adjusting date and time</li>
+    </ul>
+
+    <h2>Project Team</h2>
+    <p>
+        The project was developed by a group of four members:
+    </p>
+    <ul>
+        <li>Member 1: Kobid Karki</li>
+        <li>Member 2: Lizana Khadka</li>
+        <li>Member 3: Rashmi Paudel</li>
+        <li>Member 4: Roshan Ghimire</li>
+    </ul>
 
     <h2>Conclusion</h2>
     <p>
-        Summarize the overall outcomes of your project. Discuss any challenges faced during development and how you overcame them. Mention any future enhancements or developments planned for the project.
+        Summarize the achievements and outcomes of the project. Discuss any challenges faced during development and how they were overcome. Also, mention any future enhancements or further developments planned for the project.
     </p>
 </main>
 
