--- a/minor-project.html
+++ b/minor-project.html
@@ -39,6 +39,11 @@
             padding-left: 20px;
             text-align: justify;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -79,10 +84,16 @@
         <li>Member 4: Roshan Ghimire</li>
     </ul>
 
-    <h2>Conclusion</h2>
-    <p>
-        Summarize the achievements and outcomes of the project. Discuss any challenges faced during development and how they were overcome. Also, mention any future enhancements or further developments planned for the project.
-    </p>
+    <h2>Photos</h2>
+    <h3>Project Photos</h3>
+    <img src="project_photo1.jpg" alt="Project Photo 1">
+    <img src="project_photo2.jpg" alt="Project Photo 2">
+
+    <h3>Group Member Photos</h3>
+    <img src="member1_photo.jpg" alt="Member 1 Photo">
+    <img src="member2_photo.jpg" alt="Member 2 Photo">
+    <img src="member3_photo.jpg" alt="Member 3 Photo">
+    <img src="member4_photo.jpg" alt="Member 4 Photo">
 </main>
 
 </body>
