--- a/major-project.html
+++ b/major-project.html
@@ -49,6 +49,7 @@
             margin-right: auto;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
         }
         .project-photos {
             display: flex;
@@ -61,6 +62,7 @@
         .member-photos {
             display: flex;
             justify-content: center;
+            margin-bottom: 20px;
         }
         .member-photo {
             margin: 10px;
@@ -68,10 +70,30 @@
             overflow: hidden;
             width: 150px;
             height: 150px;
+            position: relative;
+            transition: transform 0.3s ease;
         }
         .member-photo img {
             width: 100%;
             height: auto;
+        }
+        .member-photo p {
+            position: absolute;
+            bottom: 5px;
+            width: 100%;
+            text-align: center;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: #fff;
+            padding: 5px;
+            margin: 0;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+        .member-photo:hover p {
+            opacity: 1;
+        }
+        .member-photo:hover, .project-photo:hover {
+            transform: scale(1.05);
         }
     </style>
 </head>
