--- a/major-project.html
+++ b/major-project.html
@@ -149,28 +149,28 @@
 
     <h2>Project Features</h2>
     <ul>
-        <li>Voting through phone calls</li>
-        <li>Voice acknowledgment</li>
-        <li>DTMF tone recognition</li>
-        <li>Vote counting and storage</li>
+        <li>Voting Through Phone Calls</li>
+        <li>Voice Acknowledgment</li>
+        <li>DTMF Tone Recognition</li>
+        <li>Vote Counting and Storage</li>
     </ul>
 
     <h2>Project Team</h2>
     <div class="member-photos">
         <div class="member-photo">
-            <img src="member1_photo.jpg" alt="Member 1 Photo">
+            <img src="img/bg-icon.png" alt="Member 1 Photo">
             <p>Kobid Karki</p>
         </div>
         <div class="member-photo">
-            <img src="member2_photo.jpg" alt="Member 2 Photo">
+            <img src="img/bg-icon.png" alt="Member 2 Photo">
             <p>Lizana Khadka</p>
         </div>
         <div class="member-photo">
-            <img src="member3_photo.jpg" alt="Member 3 Photo">
+            <img src="img/bg-icon.png" alt="Member 3 Photo">
             <p>Rashmi Paudel</p>
         </div>
         <div class="member-photo">
-            <img src="member4_photo.jpg" alt="Member 4 Photo">
+            <img src="img/bg-icon.png" alt="Member 4 Photo">
             <p>Roshan Ghimire</p>
         </div>
     </div>
@@ -178,10 +178,10 @@
     <h2>Photos</h2>
     <div class="project-photos">
         <div class="project-photo">
-            <img src="project_photo1.jpg" alt="Project Photo 1">
+            <img src="img/project-2.jpg" alt="Project Photo 1">
         </div>
         <div class="project-photo">
-            <img src="project_photo2.jpg" alt="Project Photo 2">
+            <img src="img/project-2.jpg" alt="Project Photo 2">
         </div>
     </div>
 </main>
