--- a/minor-project.html
+++ b/minor-project.html
@@ -141,35 +141,35 @@
 
     <h2>Project Components</h2>
     <ul>
-        <li>8051 microcontroller</li>
-        <li>16X2 LCD display</li>
-        <li>LM35 temperature sensor</li>
-        <li>ADC0804 ADC converter</li>
+        <li>8051 Microcontroller</li>
+        <li>16X2 LCD Display</li>
+        <li>LM35 Temperature Sensor</li>
+        <li>ADC0804 ADC Converter</li>
     </ul>
 
     <h2>Project Features</h2>
     <ul>
-        <li>Display of time and date</li>
-        <li>Ambient temperature measurement</li>
-        <li>User inputs for adjusting date and time</li>
+        <li>Display of Time and Date</li>
+        <li>Ambient Temperature Measurement</li>
+        <li>User Inputs for Adjusting Date and Time</li>
     </ul>
 
     <h2>Project Team</h2>
     <div class="member-photos">
         <div class="member-photo">
-            <img src="member1_photo.jpg" alt="Member 1 Photo">
+            <img src="img/bg-icon.png" alt="Member 1 Photo">
             <p>Kobid Karki</p>
         </div>
         <div class="member-photo">
-            <img src="member2_photo.jpg" alt="Member 2 Photo">
+            <img src="img/bg-icon.png" alt="Member 2 Photo">
             <p>Lizana Khadka</p>
         </div>
         <div class="member-photo">
-            <img src="member3_photo.jpg" alt="Member 3 Photo">
+            <img src="img/bg-icon.png" alt="Member 3 Photo">
             <p>Rashmi Paudel</p>
         </div>
         <div class="member-photo">
-            <img src="member4_photo.jpg" alt="Member 4 Photo">
+            <img src="img/bg-icon.png" alt="Member 4 Photo">
             <p>Roshan Ghimire</p>
         </div>
     </div>
@@ -177,10 +177,10 @@
     <h2>Photos</h2>
     <div class="project-photos">
         <div class="project-photo">
-            <img src="project_photo1.jpg" alt="Project Photo 1">
+            <img src="img/project-1.jpg" alt="Project Photo 1">
         </div>
         <div class="project-photo">
-            <img src="project_photo2.jpg" alt="Project Photo 2">
+            <img src="img/project-1.jpg" alt="Project Photo 2">
         </div>
     </div>
 </main>
