--- a/index.html
+++ b/index.html
@@ -337,9 +337,9 @@
                             <i class="fa fa-crop-alt fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">Master's Degree</h4>
-                            <h6 class="mb-3"><span class="text-primary">20..-20</span></h6>
-                            <span>.....</span><br> <span>......</span>
+                            <h4 class="mb-3"></h4>
+                            <h6 class="mb-3"><span class="text-primary"></span></h6>
+                            <span></span><br> <span></span>
                         </div>
                     </div>
                 </div>
