--- a/index.html
+++ b/index.html
@@ -451,7 +451,12 @@
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <p class="mb-4">Tyep Your Message and Send to Me.</p>
+                    <p class="mb-4">Type Your Message and Send to Me. or you can follow me on <div class="d-flex pt-2">
+                        <a class="btn btn-square btn-primary me-2" href="https://www.facebook.com/erroshanghimire" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.youtube.com/channel/UC2s0phzTsXDMf4RfCsMtb4A" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.linkedin.com/in/erroshanghimire/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                    </p> 
                         <form action="https://formspree.io/f/xpzvgwon" method="POST">
                         <div class="row g-3">
                             <div class="col-md-6">
