--- a/index.html
+++ b/index.html
@@ -258,15 +258,15 @@
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row gy-5 gx-4">
                                 <div class="col-sm-6">
-                                    <h5>Information Technology Officer</h5>
+                                    <h5>IT Officer</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">Dec 2014 – July 2023</p>
                                     <h6 class="mb-0">Chautara Sangachokgadhi Municipality, Nepal</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Store Team Member (Proactive Team Member)</h5>
+                                    <h5>Store Team Member</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">Sep 2023 – Till Now</p>
+                                    <p class="text-primary mb-1">Sep 2023 – Sep 2025</p>
                                     <h6 class="mb-0">Woolworths Group, Mortdale, Sydney</h6>
                                 </div>
                                 <div class="col-sm-6">
@@ -280,6 +280,12 @@
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">Feb 2024 - May 2024</p>
                                     <h6 class="mb-0">Anglicare Aged Care, Taren Point, Sydney</h6>
+                                </div>
+                                <div class="col-sm-6">
+                                    <h5>Section Lead (Protein Department)</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">5 August, 2024 - Till Now</p>
+                                    <h6 class="mb-0">Harris Farm Market, Redfern, Sydney</h6>
                                 </div>
                             </div>
                         </div>
