--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <h3 class="text-primary mb-3">I'm</h3>
                     <h1 class="display-3 mb-3">Roshan Ghimire</h1>
                     <h2 class="typed-text-output d-inline"></h2>
-                    <div class="typed-text d-none">Electronics & Communication Engineer, Information Technology Officer, ISPS Engineer, Store Team Member, Shop Assistant </div>
+                    <div class="typed-text d-none">Electronics & Communication Engineer, Information Technology Officer, ISPS Engineer, Store Team Member, Section Lead </div>
                     <div class="d-flex align-items-center pt-5">
                         <a href="https://drive.usercontent.google.com/u/0/uc?id=1Ao1oc6RRz3nMxllUBX1tbrlFH-X1NjJE&export=download" class="btn btn-primary py-3 px-4 me-5">Download Resume</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
@@ -283,7 +283,7 @@
                                     <h6 class="mb-0">Anglicare Aged Care, Taren Point, Sydney</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Section Lead (Protein Department)</h5>
+                                    <h5>Section Lead (Protein)</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">5 August, 2024 - Till Now</p>
                                     <h6 class="mb-0">Harris Farm Market, Redfern, Sydney</h6>
