--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Software Applications Management</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Financial Management Contribution</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Innovative e-Governance Implementation</p>
-                    <a class="btn btn-primary py-3 px-5 mt-3" href="https://erroshanghimire.com.np/#skill">More</a>
+                    <a class="btn btn-primary py-3 px-5 mt-3" href="https://erghimire.github.io//#skill">More</a>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-3 mb-4">
@@ -334,7 +334,7 @@
                     <h1 class="display-5 mb-0">My Education</h1>
                 </div>
                 <div class="col-lg-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="https://erroshanghimire.com.np/trainings.html" target="_blank">My Trainings</a>
+                    <a class="btn btn-primary py-3 px-5" href="https://erghimire.github.io//trainings.html" target="_blank">My Trainings</a>
                 </div>
             </div>
             <div class="row g-4">
@@ -412,7 +412,7 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/project-1.jpg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://erroshanghimire.com.np/minor-project.html" target="_blank"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://erghimire.github.io//minor-project.html" target="_blank"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
@@ -420,7 +420,7 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/project-2.jpg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://erroshanghimire.com.np/major-project.html" target="_blank"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://erghimire.github.io//major-project.html" target="_blank"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
@@ -520,7 +520,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom text-secondary" href="https://erroshanghimire.com.np">Roshan Ghimire</a>, All Right Reserved.
+                        &copy; <a class="border-bottom text-secondary" href="https://erghimire.github.io/">Roshan Ghimire</a>, All Right Reserved.
                     </div>
                 </div>
             </div>
