--- a/index.html
+++ b/index.html
@@ -436,13 +436,13 @@
                     <h1 class="display-5 mb-0">My Location</h1>
                 </div>
                 <div class="col-lg-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="https://www.facebook.com/erroshanghimire/" target="_blank">Say Hello</a>
+                    <a class="btn btn-primary py-3 px-5" href="https://www.facebook.com/iamroshanghimire" target="_blank">Say Hello</a>
                 </div>
             </div>
             <div class="row g-5">
                 <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="mb-2">My Home:</p>
-                    <h5 class="fw-bold">50 Martin Place, Mortdale, NSW, Sydney</h5>
+                    <h5 class="fw-bold">31-37 Hassal St, Parramatta, NSW, Sydney</h5>
                     <hr class="w-100">
                     <p class="mb-2">Call Me:</p>
                     <h5 class="fw-bold">+61 045 2024 208</h5>
@@ -452,16 +452,16 @@
                     <hr class="w-100">
                     <p class="mb-2">Follow Me:</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-primary me-2" href="https://www.facebook.com/erroshanghimire" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-primary me-2" href="https://www.youtube.com/channel/UC2s0phzTsXDMf4RfCsMtb4A" target="_blank"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-primary me-2" href="https://www.linkedin.com/in/erroshanghimire/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.facebook.com/iamroshanghimire" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.youtube.com/@iamRoshanGhimiree" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.linkedin.com/in/iamroshanghimire/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <p class="mb-4">Type Your Message and Send to Me. or you can follow me on <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-primary me-2" href="https://www.facebook.com/erroshanghimire" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-primary me-2" href="https://www.youtube.com/channel/UC2s0phzTsXDMf4RfCsMtb4A" target="_blank"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-primary me-2" href="https://www.linkedin.com/in/erroshanghimire/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.facebook.com/iamroshanghimire" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.youtube.com/@iamRoshanGhimiree" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.linkedin.com/in/iamroshanghimire/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     </p> 
                         <form action="https://formspree.io/f/xpzvgwon" method="POST">
